# loeti

./: .gitignore  .gitmodules  README.md  justfile
.github/ci/: build.sh
.github/workflows/: ci.yml
.zed/: settings.json
app/: 99-ergot.rules  Cargo.toml  README.md
app/src/: app.rs  comm.rs  data.rs  lib.rs  main.rs  plotting.rs
firmware/ergot/: Cargo.toml
firmware/ergot/src/: main.rs
firmware/loeti/: Cargo.toml  build.rs
firmware/loeti/.cargo/: config.toml
firmware/loeti/board_v6/: Cargo.toml
firmware/loeti/board_v6/src/: main.rs
firmware/loeti/board_v7/: Cargo.toml
firmware/loeti/board_v7/.cargo/: config.toml
firmware/loeti/common/: Cargo.toml  build.rs
firmware/loeti/common/src/: app.rs  dfu.rs  eeprom.rs  lib.rs  power.rs
firmware/loeti/common/src/control/: library.rs  measurement.rs  mod.rs  tool.rs
firmware/loeti/common/src/control/tool/: mod.rs  resources.rs  sensors.rs
firmware/loeti/common/src/tool/: library.rs  mod.rs
firmware/loeti/common/src/ui/: display.rs  encoder.rs  mod.rs
firmware/loeti/common/src/ui/display/: hat.rs  mod.rs
firmware/loeti/src/: comm.rs  display.rs  eeprom.rs  iron.rs  lib.rs  main.rs  power.rs  tool.rs  ui.rs  usb_pd.rs
firmware/loeti/src/tool/: library.rs  mod.rs
firmware/loeti/src/ui/: display.rs  encoder.rs  mod.rs
firmware/usb-pd-testing/: Cargo.toml
firmware/usb-pd-testing/src/: main.rs  power.rs
hardware/: .gitignore  .~lock.loeti.csv#  README.md  _autosave-loeti.kicad_pcb  adapter.kicad_pcb  adapter.kicad_sch  custom.bck  custom.dcm  custom.kicad_sym  custom.lib  fp-info-cache  fp-lib-table  hardware.ioc  holder.kicad_pcb  holder.kicad_pro  holder.kicad_sch  loeti-cache.lib  loeti-rescue.kicad_sym  loeti.csv  loeti.kicad_pcb  loeti.kicad_pcb-bak  loeti.kicad_pro  loeti.kicad_sch  loeti.lib  loeti.pro  loeti.sch  loeti.sch-bak  switchmode.asc  switchmode.net  switchmode.op.raw  switchmode.plt  sym-lib-table  ~loeti.kicad_sch.lck
hardware/bom/: ibom.html
hardware/custom.pretty/: CP_Radial_D8.0mm_P3.50mm_HOR.kicad_mod  CUI_SJ-3502-SMT.kicad_mod  CUI_SJ-43614-SMT.kicad_mod  CX90M-16P.kicad_mod  D6R.kicad_mod  MiniXLR-4_Rean_RT4MPR.kicad_mod  MiniXLR-4_Switchcraft_TRAPCS_Horizontal.kicad_mod  Omron-B3AL.kicad_mod  TE_03x02_card_edge.kicad_mod
hardware/gerber/: loeti-B_Cu.gbl  loeti-B_Cu.gbr  loeti-B_Mask.gbr  loeti-B_Mask.gbs  loeti-B_Paste.gbp  loeti-B_Paste.gbr  loeti-B_SilkS.gbo  loeti-B_SilkS.gbr  loeti-Edge_Cuts.gbr  loeti-Edge_Cuts.gm1  loeti-F_Cu.gbr  loeti-F_Cu.gtl  loeti-F_Mask.gbr  loeti-F_Mask.gts  loeti-F_Paste.gbr  loeti-F_Paste.gtp  loeti-F_SilkS.gbr  loeti-F_SilkS.gto  loeti-In1_Cu.gbr  loeti-In2_Cu.gbr  loeti-NPTH-drl_map.gbr  loeti-NPTH.drl  loeti-PTH-drl_map.gbr  loeti-PTH.drl
hardware/holder/: holder.kicad_pro
hardware/pcbs/ad_fs/: ad_fs.kicad_pcb  ad_fs.kicad_pro  ad_fs.kicad_sch  fp-lib-table
hardware/pcbs/ad_fs/production/: netlist.ipc
hardware/pcbs/adapter/: adapter.kicad_pcb  adapter.kicad_pro  adapter.kicad_sch
hardware/pcbs/adapter/production/: netlist.ipc
hardware/pcbs/adapter_handle/: adapter.kicad_pcb  adapter.kicad_pro  adapter.kicad_sch
hardware/pcbs/adapter_handle/production/: netlist.ipc
hardware/pcbs/holder/: holder.kicad_pcb  holder.kicad_pro  holder.kicad_sch
hardware/pcbs/main/: fp-lib-table  ibom.config.ini  loeti.kicad_pcb  loeti.kicad_pro  loeti.kicad_sch  sym-lib-table
hardware/pcbs/main/bom/: ibom.html
hardware/pcbs/main/production/: netlist.ipc
hardware/production/: netlist.ipc
protocol/: Cargo.toml
protocol/src/: lib.rs
research/: pyproject.toml
research/research/: temp.py
software/: .gitignore  Makefile  main.c  read_dump.py  step.pkl  step_bent.pkl  step_bevel.pkl  step_chisel.pkl  temp.py
software/board/Loeti_v1/: board.h  board.mk
software/board/Loeti_v1/cfg/: board.chcfg  board.fmpp
software/board/cfg/: board.chcfg
software/cfg/: chconf.h  halconf.h  mcuconf.h
software/evaluation/: eval_step.py  show.py
software/source/: events.h
software/source/diagnostic/: diagnostic.c  diagnostic.h
software/source/heater/: heater.c  heater.h
software/source/lcd/: lcd.c  lcd.h  ssd1803_calc.c  ssd1803_calc.h  ssd1803_ctrl.c  ssd1803_ctrl.h  ssd1803_def.h  ssd1803_reg.h  ssd1803_set.c  ssd1803_set.h  ssd1803a_def.h  ssd1803a_reg.h  ssd1803a_set.c
software/source/locks/: dma_lock.h
software/source/sensor/: sensor.c  sensor.h
software/source/spi/: spi.c  spi.h  spiHelper.c  spiHelper.h
software/source/tc_adc/: tc_adc.c  tc_adc.h
software/source/ui/: ui.c  ui.h
software/source/usb-pd/: usb_pd.c  usb_pd.h
software/source/usb-pd/api/: USB_PD_core.c  USB_PD_core.h  USB_PD_defines.h
